# argos3-dta

./: .gitignore  README.md  analysis.py  data.csv  degree_testing.py  degree_testing_output.csv  run_network_sizes.sh  run_proximity_sizes.sh  testing_proximity_degrees.sh
auxiliary/: analysis_single_topology.py  plot_multiple_topologies.py
auxiliary/degree_testing/: degree_testing.py  proximity_deg_test.argos.in  range_to_deg.txt  run_proximity_sizes.sh  testing_proximity_degrees.sh
auxiliary/proximity_files/: run_proximity_sizes.sh
auxiliary/proximity_files/proximity_20/: proximity_deg_test.argos.in
auxiliary/proximity_files/proximity_30/: proximity_deg_test.argos.in
auxiliary/proximity_files/proximity_40/: proximity_deg_test.argos.in
auxiliary/proximity_files/proximity_50/: proximity_deg_test.argos.in
auxiliary/shell_scripts/: run_network_sizes.sh  run_proximity_sizes.sh  testing_proximity_degrees.sh
src/: CMakeLists.txt
src/cmake/: ARGoSBuildChecks.cmake  FindSRoCS.cmake
src/controllers/: experiment.argos
src/experiment/: abstract.argos.in  abstract_ilja.argos.in  abstract_ilja_large.argos.in  abstract_large.argos.in  builderbot.lua  generate_data.py  large-nocomm.argos.in  large-proximity.argos.in  large.argos.in  medium-nocomm.argos.in  medium-proximity.argos.in  medium.argos.in  pipuck.lua  pipuck_ilja.lua  pipuck_ilja_expl_n_diss_separated.lua  small-nocomm.argos.in  small-proximity.argos.in  small.argos.in  srocs.argos.in  template.argos.in  visualization.argos.in
src/loop-function/: CMakeLists.txt  srocs_dta_loop_functions.cpp  srocs_dta_loop_functions.h
src/loop_functions/: CMakeLists.txt  dta_abstract_loop_functions.cpp  dta_abstract_loop_functions.h  dta_abstract_loop_functions_backup.cpp  dta_abstract_loop_functions_ilja.cpp  dta_abstract_loop_functions_ilja.h  dta_loop_functions.cpp  dta_loop_functions.h  dta_srocs_loop_functions.cpp  dta_srocs_loop_functions.h  dta_visualization_loop_functions.cpp  dta_visualization_loop_functions.h
